--- a/ldproxy/Cargo.toml
+++ b/ldproxy/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "ldproxy"
-version = "0.3.4"
-edition = "2018"
+version = "0.4.0"
+edition = "2024"
+rust-version = "1.85"
 authors = ["Ivan Markov <ivan.markov@gmail.com>", "Dominik Gschwind <dominik.gschwind99@gmail.com>"]
 categories = ["embedded", "command-line-utilities"]
 keywords = ["linker", "linker-proxy", "cli"]
@@ -11,7 +12,7 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-embuild = { version = "0.33", path = ".." }
-anyhow = {version = "1", features = ["backtrace"]}
-log = "0.4"
-env_logger = "0.9"
+embuild = { version = "0.34", path = ".." }
+anyhow = {version = "1.0.100", features = ["backtrace"]}
+log = "0.4.28"
+env_logger = "0.11.8"
